Fixed the abnormal gap between the divs

--- a/css/style.css
+++ b/css/style.css
@@ -348,10 +348,10 @@ a:visited{
         margin-left: 603px !important;
     }
     #address{
-        margin-left: 236px;
+        margin-left: 313px;
     }
     .links{
-        margin-right: 203px;
+        margin-right: 355px;
     }
 }
 
